--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/common": "^7.1.0",
     "@angular/compiler": "^7.1.0",
     "@angular/core": "^7.1.0",
+    "@angular/fire": "^5.1.2",
     "@angular/forms": "^7.1.0",
     "@angular/http": "^7.1.0",
     "@angular/platform-browser": "^7.1.0",
@@ -29,9 +30,11 @@
     "@angular/router": "^7.1.0",
     "@angular/upgrade": "^7.1.0",
     "angular-in-memory-web-api": "github:angular/in-memory-web-api",
-    "webpack-dev-server": ">=3.1.11",
+    "angularfire2": "^5.1.2",
     "core-js": "^2.5.4",
+    "firebase": "^5.10.0",
     "rxjs": "^6.3.0",
+    "webpack-dev-server": ">=3.1.11",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
